Revert "Fixed the white flickering that happened every refresh"

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -206,7 +206,7 @@ body {
     font-weight: 400;
 }
 
-.dark-mode body {
+body.dark-mode  {
     background-color: var(--dark-background-color);
 }   
 
@@ -283,12 +283,10 @@ p {
     background: white;
     margin-left: 1em;
     width: 25em;
-    color: var(--light-text-color);
 }
 
 .dark-mode .search-container input[type="text"] {
     border: 1px solid var(--dark-border-color);
-    color: var(--light-text-color);
 }
 
 .search-container input[type="text"]:focus {
